# kube_viewer

./: .gitignore  KubeViewerApp-Bridging-Header.h  README.md  xc-universal-binary.sh
Extensions/: RustPublished.swift
Extensions/Transitions/: SlideUpDown.swift
Extensions/View/: If.swift  readSize.swift
FFIHelpers/: RustPublished.swift
KubeViewerApp/: BlurWindow.swift  ContentView.swift  GlobalViewModel.swift  Info.plist  KeyHandlerModel.swift  KubeViewerApp.swift  KubeViewerAppApp.swift  LoadStatus.swift  MainView.swift  MainViewModel.swift  RustPublished.swift  TabContentView.swift  TabView.swift  Theme.swift  ViewModel.swift
KubeViewerApp.xcodeproj/: project.pbxproj
KubeViewerApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
KubeViewerApp.xcodeproj/project.xcworkspace/xcuserdata/praveen.xcuserdatad/: UserInterfaceState.xcuserstate
KubeViewerApp.xcodeproj/xcshareddata/xcschemes/: KubeViewerApp.xcscheme
KubeViewerApp.xcodeproj/xcuserdata/praveen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
KubeViewerApp.xcodeproj/xcuserdata/thavishperera.xcuserdatad/xcschemes/: xcschememanagement.plist
KubeViewerApp/Deployment/: DeploymentView.swift
KubeViewerApp/Extensions/: Clipboard.swift  GeneralComparators.swift  KeyAware.swift  NodeComparators.swift  OptionalBinding.swift  PodComparators.swift  Task.swift
KubeViewerApp/Extensions/Transitions/: SlideUpDown.swift
KubeViewerApp/Extensions/View/: whenHovered.swift
KubeViewerApp/FFIHelpers/: RustPublished.swift
KubeViewerApp/Node/: Node.swift  NodeDetailDropDownView.swift  NodeDetailView.swift  NodeView.swift  NodeViewModel.swift  TaintView.swift
KubeViewerApp/Pod/: Pod.swift  PodDeleteConfirmMessageView.swift  PodDetailView.swift  PodPhaseView.swift  PodView.swift  PodViewModel.swift
KubeViewerApp/Pod/Container/: ContainerStatePopoverView.swift  ContainerStatusView.swift  ContainerView.swift
KubeViewerApp/Protocols/: TimestampAndAge.swift
KubeViewerApp/Styles/: SidebarDisclosureGroupStyle.swift
KubeViewerApp/TabContent/: SideBarTabView.swift  TabContentView.swift  TabViewModel.swift
KubeViewerApp/View/: AgeView.swift  CollapsibleList.swift  DetailDropDownView.swift  NameView.swift  NamespacePicker.swift  Pill.swift  PopoverWithDelayView.swift  Searchbar.swift  StandardFocusRing.swift
KubeViewerApp/View/Sidebar/: SidebarButton.swift  SidebarTitle.swift
KubeViewerApp/Window/: BlurWindow.swift
View/: Searchbar.swift
bindings/: Cargo.toml  build.rs  build.sh
bindings/src/: generic_hasher.rs  key_handler.rs  kube_viewer.udl  lib.rs  main_view_model.rs  main_view_model.udl  tab.rs  tab_group.rs
bindings/src/main_view_model/: key_handler.rs
core/: Cargo.toml  build  build.sh
core/src/: cluster.rs  env.rs  global_view_model.rs  key_handler.rs  kube_viewer.udl  kubernetes.rs  lib.rs  main_view_model.rs  tab.rs  task.rs  timestamps.rs  user_config.rs  view_models.rs
core/src/kubernetes/: client.rs  client_store.rs  core.rs  kube_config.rs  node.rs  pod.rs  pod_uniffi.rs
core/src/main_view_model/: key_handler.rs
core/src/view_models/: global.rs  main.rs  node.rs  pod.rs
core/src/view_models/main/: key_handler.rs
uniffi-bindgen/: Cargo.toml
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: main.rs
