[package]
edition = "2021"
name = "kube_viewer"
version = "0.1.0"

[dependencies]
derive_more = "0.99.17"
indexmap = "1.9.2"
maplit = "1.0.2"
uniffi = {version = "0.23"}
uuid = "1.3.0"

[build-dependencies]
uniffi = {version = "0.23", features = ["build"]}

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "kube_viewer"
