[package]
edition = "2021"
name = "kube_viewer"
version = "0.1.0"

[features]
cli = ["uniffi/cli"]

[dependencies]
# uniffi
uniffi = {version = "0.23"}

# data structure
indexmap = "1.9.2"

# utils
derive_more = "0.99.17"
maplit = "1.0.2"
once_cell = "1.0"
uuid = "1.3.0"

[build-dependencies]
uniffi = {version = "0.23", features = ["build"]}

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "kube_viewer"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
