[package]
edition = "2021"
name = "kube_viewer"
version = "0.1.0"

[features]
cli = ["uniffi/cli"]

[dependencies]
# uniffi
uniffi = {version = "0.23"}

# data structure
derive_more = {version = "0.99.17", default-features = false, features = ["as_ref", "display", "from", "from_str"]}
indexmap = "1.9.2"
maplit = "1.0.2"
once_cell = "1.0"
uuid = "1.3.0"

# threads
crossbeam = "0.8.2"
parking_lot = "0.12.1"

[build-dependencies]
uniffi = {version = "0.23", features = ["build"]}

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "kube_viewer"
