[package]
edition = "2021"
name = "kube_viewer"
version = "0.1.0"

[features]
cli = ["uniffi/cli"]

[dependencies]
# uniffi
uniffi = {version = "0.23"}

# data structure
indexmap = "1.9.2"
maplit = "1.0.2"
once_cell = "1.0"
uuid = "1.3.0"

# logging
tracing = "0.1"
tracing-log = "0.1"

# async
tokio = {version = "1.26", features = ["macros", "rt", "rt-multi-thread"]}

# error handling
eyre = "0.6"
thiserror = "1"

# utility 
derive_more = {version = "0.99.17", default-features = false, features = ["as_ref", "display", "from", "from_str"]}

# kubernetes
kube = { version = "0.82", features = ["client", "runtime", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }

# concurrency
crossbeam = "0.8.2"
parking_lot = "0.12.1"

# config files
etcetera = "0.7"

# file watcher
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }

# json
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.96"

# logging
log = "0.4"
env_logger = "0.10" 
chrono = "0.4.24"
act-zero = { version = "0.4.0", features = ["default-tokio"] }
async-trait = "0.1.68"
futures = "0.3.28"

[build-dependencies]
uniffi = {version = "0.23", features = ["build"]}

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "kube_viewer"
