[package]
edition = "2021"
name = "kube_viewer"
version = "0.1.0"

[features]
cli = ["uniffi/cli"]

[dependencies]
# uniffi = "0.24.2"
uniffi  = {git = "https://github.com/mozilla/uniffi-rs.git", features = ["tokio"]}

# data structure
indexmap = "2.0"
maplit = "1.0.2"
once_cell = "1.18"
uuid = "1.4"

# logging
tracing = "0.1"
tracing-log = "0.1"

# async
tokio = {version = "1.29", features = ["macros", "rt", "rt-multi-thread"]}
async-trait = "0.1"
futures = "0.3.28"

# async actors
act-zero = { version = "0.4.0", features = ["default-tokio"] }

# error handling
eyre = "0.6"
thiserror = "1"

# utility 
derive_more = {version = "0.99.17", default-features = false, features = ["as_ref", "display", "from", "from_str"]}
chrono = "0.4.24"

# kubernetes
kube = { version = "0.86", features = ["client", "runtime", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }

# concurrency
crossbeam = "0.8.2"

# TODO: FIX BEFORE RELEASE: remove deadlock detection
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }

# config files
etcetera = "0.8"

# file watcher
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }

# json
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.96"

# logging
log = "0.4"
env_logger = "0.10" 

# fake data
fake = { version = "2.6", features=['derive']}
rand = "0.8"
either = "1.9.0"

[build-dependencies]
# uniffi = {version = "0.24.2", features = ["build"]}
uniffi  = {git = "https://github.com/mozilla/uniffi-rs.git", features = ["build"]}

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "kube_viewer"
